--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
     "bcrypt": "^3.0.6",
+    "bootstrap": "^4.3.1",
     "express": "4.17.1",
     "mongoose": "^5.6.9",
     "nodemon": "^1.19.1",
