--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --open",
+    "startServer": "nodemon server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -21,10 +22,12 @@
     "@angular/router": "~8.2.0",
     "bcrypt": "^3.0.6",
     "bootstrap": "^4.3.1",
+    "cors": "^2.8.5",
     "express": "4.17.1",
     "mongoose": "^5.6.9",
     "nodemon": "^1.19.1",
-    "rxjs": "~6.4.0",
+    "rxjs": "^6.5.2",
+    "rxjs-compat": "^6.5.2",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
